third_year/programming_languages_and_paradigms/project_2/PL-version/examples/good/z-poprawna-interferencja-3.hml
let mapf l x =
  if null l so
    []
  otherwise
    (head l x) : (mapf (tail l) x)
in
mapf