third_year/programming_languages_and_paradigms/project_2/PL-version/examples/bad/zz-niezgodne-typy-9.hml
let mapf l x =
  if null l so
    []
  otherwise
    (head l x) : (mapf (tail l) x)
in
mapf [\x -> x+1, \x -> x+2] true